--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>تواصل - Al-Minshaw Shop</title>
+    <title>من نحن - Al-Minshaw Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -11,16 +14,15 @@
     <header class="navbar">
         <div class="container wrap">
             <a class="brand" href="index.html">
-                <img src="assets/icons/ams-logo.png" alt="Al-Minshaw Shop Logo" style="width:32px;height:32px;border-radius:8px;">
-                Al-Minshaw Shop
+                <img src="assets/icons/ams-logo.png" alt="Logo"> Al-Minshaw Shop
             </a>
             <label for="menu-toggle" class="burger"><span></span></label>
             <input type="checkbox" id="menu-toggle" />
             <nav class="nav">
                 <a href="index.html">الرئيسية</a>
                 <a href="products.html">المنتجات</a>
-                <a href="about.html">من نحن</a>
-                <a class="active" href="contact.html">تواصل</a>
+                <a class="active" href="about.html">من نحن</a>
+                <a href="contact.html">تواصل</a>
             </nav>
         </div>
     </header>
@@ -35,18 +37,11 @@
                 <div class="split">
                     <div>
                         <h3 class="m-0">قصة Al-Minshaw Shop</h3>
-                        <p class="lead">
-                            بدأ متجرنا بفكرة بسيطة: تقديم تجربة طعام ومشروبات تمنحك الجودة والذوق في كل كوب ووجبة.
-                            نختار مكوناتنا بعناية، ونتعاون مع موردين محليين لنقدّم قهوة مختصة، مشروبات منعشة، ووجبات تُحضّر يوميًا.
-                        </p>
+                        <p class="lead">بدأ متجرنا بفكرة بسيطة: تقديم تجربة طعام ومشروبات تمنحك الجودة والذوق في كل كوب ووجبة.</p>
+                        <h3 class="m-0">رؤيتنا</h3><p>أن نكون وجهتك الأولى لكل ما هو طازج ولذيذ.</p>
+                        <h3 class="m-0">مهمتنا</h3><p>تقديم منتجات عالية الجودة بأسعار عادلة وخدمة مميزة.</p>
 
-                        <h3 class="m-0">رؤيتنا</h3>
-                        <p>أن نكون وجهتك الأولى لكل ما هو طازج ولذيذ — مع تجربة سهلة وسريعة عبر الموقع.</p>
-
-                        <h3 class="m-0">مهمتنا</h3>
-                        <p>تقديم منتجات عالية الجودة بأسعار عادلة، وخدمة مميزة من لحظة الطلب حتى الاستلام.</p>
-
-                        <div class="kpis mt-16" style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px">
+                        <div class="mt-16" style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px">
                             <div class="kpi center card" style="padding:12px"><strong>2018</strong><br>تأسسنا</div>
                             <div class="kpi center card" style="padding:12px"><strong>120+</strong><br>مورد محلي</div>
                             <div class="kpi center card" style="padding:12px"><strong>98%</strong><br>★★★★★ تقييمات</div>
@@ -54,9 +49,7 @@
                     </div>
 
                     <div>
-                        <div class="card" style="padding:0;border:none;background:transparent">
-                            <img src="assets/images/Coffee.jpg" alt="Coffee sample" style="border-radius:12px">
-                        </div>
+                        <img src="assets/images/Coffee.jpg" alt="Coffee sample" style="border-radius:12px">
                     </div>
                 </div>
             </div>
@@ -77,7 +70,13 @@
 
     <footer>
         <div class="container footer-grid">
-            <div><h4>Al-Minshaw Shop</h4><p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p></div>
+            <div>
+                <h4>
+                    <img src="assets/icons/ams-logo.png" alt="Logo" style="width:20px;height:20px;border-radius:5px;vertical-align:middle;margin-left:6px;">
+                    Al-Minshaw Shop
+                </h4>
+                <p>وجهتك للأطعمة والمشروبات المختارة بعناية.</p>
+            </div>
             <div><h4>التواصل</h4><p>📧 <a href="mailto:youssif2371@gmail.com">youssif2371@gmail.com</a><br>📞 <a href="tel:+201554338151">+201554338151</a></p></div>
             <div><h4>روابط</h4><p><a href="products.html">المنتجات</a><br><a href="contact.html">تواصل</a></p></div>
         </div>
